# self-evolution_data_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .pyright-baseline.txt  CHANGELOG.md  Makefile  README.md  README_CN.md  docker-compose.langfuse.yml  docker-compose.prod.yml  docker-compose.yml  pyrightconfig.json
backend/: .dockerignore  .env.example  .env.prod.example  .env.test.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  logging_config.py  main.py  tracing.py
backend/prompts/: 00-entity-extraction.md  01-enum-class-extraction.md  02-relationship-dao-extraction.md  03-mybatis-where-evidence.md  05-terminology-extraction.md  06-business-rule-extraction.md  08-semantic-equivalence-check.md  09-java-skeleton-extract.md  10-java-type-expand.md  extraction-agent-base.md  forced_plan_guidance.md  humanize_query_gen.md  present_result.md  semantic_equivalence.md
backend/scripts/: accept_ds3_count_and_prevalidation.py  archive_schema_summary.py  backfill_hypothetical_queries.py  backfill_knowledge_vectors.py  backfill_relationship_shape.py  benchmark_enum_prompt.py  benchmark_real_repo.py  check_equivalence_prompt_drift.sh  check_no_hardcode.py  cleanup_mybatis_extract_examples.py  encrypt_datasource_passwords.py  extract_query_examples_from_history.py  migrate_sqlite_to_pg.py  probe_documentdb_caps.py  prototype_trace_compression.py  prototype_trace_refiner_with_compression.py  reembed_after_model_change.py  reindex_examples_with_paraphrases.py  relabel_legacy_terminology.py  resolve_table_desc_conflicts.py  seed_rbac_e2e.py  seed_terminology_conflict.py  test_trace_refiner_real_data.py  verify_agentic_equivalence.py  verify_db_chromadb_consistency.py  verify_mongo_caps.py
backend/tests/: _db_schema_sync.py  conftest.py  test_backfill_knowledge_vectors.py  test_code_parser.py  test_dao_mapping_first_seen_bug.py  test_dao_mapping_overrides_collection.py  test_dao_refactor.py  test_evaluator.py  test_health_endpoint.py  test_json_parser.py  test_knowledge_api_edit.py  test_knowledge_api_intake.py  test_knowledge_collection.py  (+13 more)
(+641 files in other folders)
