[project]
name = "self-evolution_data_agent"
version = "0.1.0"
description = "NL2SQL Self-Evolution Data Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "chromadb>=1.5.2",
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "pymysql>=1.1.0",
    "pymongo>=4.9.0",
    "motor>=3.6.0",
    "cryptography>=43.0.0",
    "gitpython>=3.1.43",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",  # passlib 与 bcrypt 5.x 不兼容
    "nanoid>=2.0.0",
    "json-repair>=0.50.0",  # LLM 残缺 JSON 本地修复 (未转义引号/尾随逗号等)
    "pyahocorasick>=2.0.0",  # AC 自动机术语精确匹配
    "aiomysql>=0.2.0",
    "oracledb>=2.0.0",
    "sqlparse>=0.5.0",
    "pandas>=2.0.0",
    "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "hypothesis>=6.0.0",   # property-based testing (test_json_parser, test_mongo_flavor 等)
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# pytest-asyncio 1.x 默认 fixture/test loop scope 为 function, 与本项目 session 级
# 引擎 fixture (_engine) 冲突 → "attached to a different loop"。锁回 session 级
# (项目原 event_loop session fixture 的等价配置), 保证 db rollback fixture 可用。
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "real_llm: tests that require a real LLM API key (skipped by default in CI; gated to acceptance phase)",
    "live: real-system tests, opt-in via -m live",
    "slow: long-running tests, opt-in via -m slow",
    "timeout: tests with explicit timeout constraints",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
